--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -41,6 +41,8 @@
   width: 100%; /* vai se adequar ao container que ela estiver */
 }
 
+/* Media Queries: Small */
+
 @media (min-width: 576px) {
   .home-container {
     font-size: 40px;
@@ -59,5 +61,82 @@
 
   .home-content-container button {
     width: 506px;
+  }
+
+  .home-image-container svg {
+    width: 506px;
+  }
+}
+
+/* Media Queries: Medium */
+
+@media (min-width: 768px) {
+  .home-image-container {
+    padding: 100px 15px;
+  }
+
+  .home-content-container {
+    padding: 20px 20px 100px 20px;
+  }
+}
+
+/* Media Queries: Large */
+
+@media (min-width: 992px) {
+  .home-container {
+    font-size: 55px;
+    padding: 40px;
+  }
+
+  .home-image-container {
+    padding: 125px 15px;
+  }
+
+  .home-content-container {
+    padding: 20px 20px 150px 20px;
+  }
+
+  .home-content-container h1 {
+    margin-bottom: 26px;
+    width: 700px;
+  }
+
+  .home-content-container p {
+    margin-bottom: 47px;
+    width: 700px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-card {
+    flex-direction: row; /* Default. Colocado para sobrescrever a config de antes */
+    justify-content: space-around;
+    padding: calc((85vh - 480px) / 2 - 20px) 0;
+  }
+
+  .home-content-container {
+    align-content: space-between;
+    align-items: flex-start;
+    flex-flow: wrap;
+    height: 480px;
+    padding: 20px;
+    text-align: left;
+    width: 700px;
+  }
+
+  .home-image-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .home-image-container svg {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .home-image-container svg {
+    width: 480px;
   }
 }
