--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -3,15 +3,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 * {
-    font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
-    margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 0;
 }
 
-a, a:hover {
-    text-decoration: none;
-    color: unset; /* sem cor defenida, nesse caso, para links */
+a,
+a:hover {
+  text-decoration: none;
+  color: unset; /* sem cor defenida, nesse caso, para links */
+}
+
+.base-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
