--- a/frontweb/src/components/ButtonIcon/styles.css
+++ b/frontweb/src/components/ButtonIcon/styles.css
@@ -1,3 +1,34 @@
-.btn-icon {
-    height: 50px;
+.btn-container {
+  display: flex;
+}
+
+.btn-container button {
+  border-radius: 10px 0 0 10px;
+}
+
+.btn h6 {
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.btn-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #335698;
+  border-radius: 0 10px 10px 0;
+  height: 50px;
+  width: 50px;
+}
+
+@media (min-width: 576px) {
+  .btn-icon-container {
+    height: 70px;
+    width: 70px;
+  }
+
+  .btn h6 {
+    font-size: 18px;
+  }
 }
